; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_io_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_io_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nct_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nct_softc*, i32, i32)* @nct_io_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nct_io_read(%struct.nct_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nct_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.nct_softc* %0, %struct.nct_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.nct_softc*, %struct.nct_softc** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @nct_io_set_group(%struct.nct_softc* %7, i32 %8)
  %10 = load %struct.nct_softc*, %struct.nct_softc** %4, align 8
  %11 = getelementptr inbounds %struct.nct_softc, %struct.nct_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @bus_read_1(i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @nct_io_set_group(%struct.nct_softc*, i32) #1

declare dso_local i32 @bus_read_1(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
